--- a/.deploy-now/config.yaml
+++ b/.deploy-now/config.yaml
@@ -1,12 +1,20 @@
 version: 1.0.0
-distDir: dist
-routes:
+build:
+  outputDirectory: dist
+  commands:
+    - pnpm install
+    - pnpm run build
+routing:
   fallback: index.html
 domains:
   - baphomet.collinlucke.com
 headers:
   - source: "/**"
     headers:
+      - key: "X-Frame-Options"
+        value: "DENY"
+      - key: "X-Content-Type-Options"
+        value: "nosniff"
       - key: "Cache-Control"
         value: "public, max-age=31536000"
   - source: "/index.html"
