--- a/.github/workflows/baphomet-ui-build.yaml
+++ b/.github/workflows/baphomet-ui-build.yaml
@@ -61,5 +61,5 @@ jobs:
           branch-id: ${{ inputs.branch-id }}
           version: ${{ github.sha }}
           folder: ${{ env.DEPLOYMENT_FOLDER }}
-          config-file: .deploy-now/baphomet-ui/config.yaml
+          config-file: .deploy-now/config.yaml
           action: upload
