--- a/.github/workflows/deploy-render-hook.yaml
+++ b/.github/workflows/deploy-render-hook.yaml
@@ -33,8 +33,9 @@ jobs:
           pnpm install
           pnpm build
 
-      - name: Deploy to Render via Deploy Hook
-        env:
-          RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-        run: |
-          curl -X POST "$RENDER_DEPLOY_HOOK"
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          cname: baphomet.collinlucke.com
