--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -49,8 +49,9 @@ jobs:
           # Clear cache to ensure latest packages are fetched
           pnpm store prune
           echo "Installing dependencies..."
-          # Remove lock file to force fresh resolution from registry
+          # Remove files that force local linking instead of registry resolution
           rm -f pnpm-lock.yaml
+          rm -f pnpm-workspace.yaml
           pnpm install --verbose
           echo "Checking if PhantomArtist was installed:"
           ls -la node_modules/@collinlucke/ || echo "PhantomArtist not found in node_modules"
