--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*", "../phantomartist/lib/styling/hexToRgba.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/unused-*"]
 }
