--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "bash scripts/dev-with-cleanup.sh",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
-    "@collinlucke/phantomartist": "1.3.3",
+    "@collinlucke/phantomartist": "1.3.4-b",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.0",
     "@stylexjs/dev-runtime": "^0.7.5",
