--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "party-js": "^2.2.0",
     "react-router-dom": "^6.30.1",
     "rollup-plugin-delete": "^2.1.0",
     "vite-plugin-static-copy": "^1.0.6",
