--- a/package.json
+++ b/package.json
@@ -15,54 +15,51 @@
     "install:prod": "pnpm install"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.9",
-    "@collinlucke/phantomartist": "1.3.4-b",
+    "@apollo/client": "^4.0.4",
+    "@collinlucke/phantomartist": "link:..\\phantomartist",
     "@emotion/babel-plugin": "^11.13.5",
-    "@emotion/styled": "^11.14.0",
-    "@stylexjs/dev-runtime": "^0.7.5",
-    "@stylexjs/stylex": "^0.7.5",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@emotion/styled": "^11.14.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react-router-dom": "^5.3.3",
-    "@vitest/browser": "^2.1.8",
-    "@vitest/runner": "^2.1.8",
-    "apollo-upload-client": "^18.0.1",
-    "dotenv": "^16.6.1",
-    "graphql": "^16.9.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/runner": "^3.2.4",
+    "apollo-upload-client": "^19.0.0",
+    "dotenv": "^17.2.2",
+    "graphql": "^16.11.0",
     "hugeicons-react": "^0.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "party-js": "^2.2.0",
-    "react-router-dom": "^6.30.1",
-    "rollup-plugin-delete": "^2.1.0",
-    "vite-plugin-static-copy": "^1.0.6",
-    "vite-plugin-stylex": "^0.10.1"
+    "react-router-dom": "^7.8.2",
+    "rollup-plugin-delete": "^3.0.1",
+    "vite-plugin-static-copy": "^3.1.2"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
-    "@eslint/js": "^9.31.0",
+    "@eslint/js": "^9.35.0",
     "@rollup/plugin-alias": "^5.1.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.15",
-    "@types/react-dom": "^18.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@vitejs/plugin-react": "^5.0.2",
+    "eslint": "^9.35.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "jsdom": "^25.0.1",
-    "nodemon": "^3.1.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.11",
-    "vitest": "^2.1.8",
-    "vitest-browser-react": "^0.0.4"
+    "jsdom": "^26.1.0",
+    "nodemon": "^3.1.10",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5",
+    "vitest": "^3.2.4",
+    "vitest-browser-react": "^1.0.1"
   },
   "peerDependencies": {
     "@emotion/react": "^11.14.0",
