--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@eslint/js": "^9.35.0",
     "@rollup/plugin-alias": "^5.1.1",
     "@testing-library/jest-dom": "^6.8.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
