--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.4",
-    "@collinlucke/phantomartist": "link:..\\phantomartist",
+    "@collinlucke/phantomartist": "^1.3.5",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.1",
     "@testing-library/react": "^16.3.0",
