--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baphomet-ui",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "dev": "bash scripts/dev-with-cleanup.sh",
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.4",
-    "@collinlucke/phantomartist": "^1.3.6",
+    "@collinlucke/phantomartist": "1.3.7",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/styled": "^11.14.1",
+    "@floating-ui/react": "^0.27.16",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/react-router-dom": "^5.3.3",
@@ -31,7 +32,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "party-js": "^2.2.0",
-    "react-router-dom": "^7.8.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "rollup-plugin-delete": "^3.0.1",
     "vite-plugin-static-copy": "^3.1.2"
   },
@@ -54,8 +56,6 @@
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.5",
@@ -64,7 +64,6 @@
   },
   "peerDependencies": {
     "@emotion/react": "^11.14.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-router-dom": "^7.8.2"
   }
 }
